<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <Button
            android:id="@+id/btnBackEditPackage"
            style="@style/Btn.Secondary"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginBottom="@dimen/spacing_lg" />

        <TextView
            style="@style/App.Title.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_package"
            android:layout_marginBottom="@dimen/spacing_lg" />

        <EditText
            android:id="@+id/etEditPackageId"
            style="@style/App.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/package_id_hint"
            android:layout_marginBottom="@dimen/spacing_md" />

        <EditText
            android:id="@+id/etEditAddress"
            style="@style/App.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:layout_marginBottom="@dimen/spacing_md" />

        <Button
            android:id="@+id/btnGeocodeEdit"
            style="@style/Btn.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geocode"
            android:layout_marginBottom="@dimen/spacing_md" />

        <TextView
            android:id="@+id/tvEditLocationStatus"
            style="@style/App.Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_not_checked"
            android:layout_marginBottom="@dimen/spacing_sm" />

        <TextView
            android:id="@+id/tvEditLatLon"
            style="@style/App.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-"
            android:layout_marginBottom="@dimen/spacing_lg" />

        <EditText
            android:id="@+id/etEditWeight"
            style="@style/App.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/spacing_md" />

        <EditText
            android:id="@+id/etEditVolume"
            style="@style/App.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/volume_hint"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/spacing_md" />

        <EditText
            android:id="@+id/etEditProfit"
            style="@style/App.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profit_hint"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/spacing_md" />

        <EditText
            android:id="@+id/etEditDeadline"
            style="@style/App.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deadline_hint"
            android:layout_marginBottom="@dimen/spacing_lg" />

        <Button
            android:id="@+id/btnSaveChanges"
            style="@style/Btn.Success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes" />

    </LinearLayout>
</ScrollView>
