<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <Button
        android:id="@+id/btnBackCourier"
        style="@style/Btn.Secondary"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <TextView
        android:id="@+id/tvCourierTitle"
        style="@style/App.Title.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_courier"
        android:layout_marginBottom="@dimen/spacing_md" />

    <TextView
        android:id="@+id/tvSelectedCompany"
        style="@style/App.Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_company_selected"
        android:layout_marginBottom="@dimen/spacing_md" />

    <TextView
        android:id="@+id/tvCourierStatus"
        style="@style/App.Status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading_couriers"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <Button
        android:id="@+id/btnLoadCouriers"
        style="@style/Btn.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_couriers"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <EditText
        android:id="@+id/etCourierId"
        style="@style/App.Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courier_id_hint"
        android:layout_marginBottom="@dimen/spacing_md" />

    <EditText
        android:id="@+id/etCourierName"
        style="@style/App.Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courier_name_hint"
        android:layout_marginBottom="@dimen/spacing_md" />

    <Button
        android:id="@+id/btnAddCourier"
        style="@style/Btn.Success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_courier"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <ListView
        android:id="@+id/listViewCouriers"
        style="@style/App.ListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="@android:color/transparent" />

</LinearLayout>
