<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background"
    android:padding="@dimen/screen_padding">

    <Button
        android:id="@+id/btnBackOptimizeResult"
        style="@style/Btn.Secondary"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <TextView
        android:id="@+id/tvRouteReadyTitle"
        style="@style/App.Title.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_ready"
        android:layout_marginBottom="@dimen/spacing_md" />

    <TextView
        android:id="@+id/tvOptimizeSummary"
        style="@style/App.Status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_optimize_result"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <Button
        android:id="@+id/btnAssignToCourier"
        style="@style/Btn.Success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assign_to_courier"
        android:layout_marginBottom="@dimen/spacing_md" />

    <Button
        android:id="@+id/btnStartDeliveryMode"
        style="@style/Btn.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_delivery_mode"
        android:layout_marginBottom="@dimen/spacing_md" />

    <Button
        android:id="@+id/btnOpenRouteMap"
        style="@style/Btn.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_route_map"
        android:layout_marginBottom="@dimen/spacing_md" />

    <Button
        android:id="@+id/btnResetLocalStatuses"
        style="@style/Btn.Danger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_local_statuses"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <ListView
        android:id="@+id/listViewRouteStops"
        style="@style/App.ListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="@android:color/transparent" />

</LinearLayout>
