<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <Button
        android:id="@+id/btnBackRole"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginBottom="18dp"/>

    <TextView
        android:id="@+id/tvSelectedCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Company: -"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_role"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnManager"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnCourier"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/courier" />

</LinearLayout>